# pstd

./: .gitmodules  CMakeLists.txt  README.md  camera.h  hitable.h  hitable_list.h  main.cpp  main.cu  material.h  ray.h  sphere.h  triangle.h  vec3.h
ext/: CMakeLists.txt
src/: context.cpp  context.hpp  main.cpp  pstd.hpp  structs.hpp  types.hpp  utils.cpp  utils.hpp
